feat: added swag spec and endpoint for update bid route; changed bid request schema and bid model to allow reusability
